fixing weird whitespace bugs on the righthand side

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -16,6 +16,12 @@
 		box-sizing: border-box;
 	}
 }
+html, body{
+    overflow-x: hidden;
+    width: 100vw;
+}
+
+
 p, h1, h2, h3, h4, h5, h6 {
     margin: 0;
     padding: 0;
